--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ language: julia
 os:
   - linux
 julia:
-  - 0.6
+  - 0.7
+  - 1.0
   - nightly
 matrix:
   allow_failures:
@@ -31,9 +32,9 @@ notifications:
 #  - julia -e 'Pkg.clone(pwd()); Pkg.build("JuliaDBMeta"); Pkg.test("JuliaDBMeta"; coverage=true)'
 after_success:
   # push coverage results to Coveralls
-  - julia -e 'cd(Pkg.dir("JuliaDBMeta")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
+  - julia -e 'import Pkg; cd(Pkg.dir("JuliaDBMeta")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
   # push coverage results to Codecov
-  - julia -e 'cd(Pkg.dir("JuliaDBMeta")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+  - julia -e 'import Pkg; cd(Pkg.dir("JuliaDBMeta")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
   # deploy docs
-  - julia -e 'Pkg.add("Documenter")'
-  - julia -e 'cd(Pkg.dir("JuliaDBMeta")); include(joinpath("docs", "make.jl"))'
+  - julia -e 'import Pkg; Pkg.add("Documenter")'
+  - julia -e 'import Pkg; cd(Pkg.dir("JuliaDBMeta")); include(joinpath("docs", "make.jl"))'
