--- a/.travis.yml
+++ b/.travis.yml
@@ -12,28 +12,19 @@ matrix:
 notifications:
   email: false
 
-## uncomment the following lines to allow failures on nightly julia
-## (tests will run but not make your overall status red)
-#matrix:
-#  allow_failures:
-#  - julia: nightly
+jobs:
+  include:
+    - stage: "Documentation"
+      julia: 1.0
+      os: linux
+      script:
+        - julia --project=docs/ -e 'using Pkg; Pkg.instantiate();
+                                    Pkg.develop(PackageSpec(path=pwd()))'
+        - julia --project=docs/ docs/make.jl
+      after_success: skip
 
-## uncomment and modify the following lines to manually install system packages
-#addons:
-#  apt: # apt-get for linux
-#    packages:
-#    - gfortran
-#before_script: # homebrew for mac
-#  - if [ $TRAVIS_OS_NAME = osx ]; then brew install gcc; fi
-
-## uncomment the following lines to override the default test script
-#script:
-#  - julia -e 'Pkg.clone(pwd()); Pkg.build("JuliaDBMeta"); Pkg.test("JuliaDBMeta"; coverage=true)'
 after_success:
   # push coverage results to Coveralls
   - julia -e 'import Pkg; cd(Pkg.dir("JuliaDBMeta")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
   # push coverage results to Codecov
   - julia -e 'import Pkg; cd(Pkg.dir("JuliaDBMeta")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
-  # deploy docs
-  - julia -e 'import Pkg; Pkg.add("Documenter")'
-  - julia -e 'import Pkg; cd(Pkg.dir("JuliaDBMeta")); include(joinpath("docs", "make.jl"))'
