--- a/Project.toml
+++ b/Project.toml
@@ -13,7 +13,7 @@ Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 [compat]
 julia = "1.0"
 Dagger = ">=0.7"
-IndexedTables = "0.9, 0.10, 0.11, 0.12"
+IndexedTables = ">=0.12.1"
 IterTools = "1"
 JuliaDB = "0.10, 0.11, 0.12"
 MacroTools = ">=0.4"
