--- a/Project.toml
+++ b/Project.toml
@@ -12,12 +12,12 @@ Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 
 [compat]
 julia = "1.0"
-Dagger = ">=0.7"
-IndexedTables = ">=0.12.1"
+Dagger = "0.7, 0.8, 0.9"
+IndexedTables = "0.12.1, 0.13"
 IterTools = "1"
-JuliaDB = "0.10, 0.11, 0.12"
-MacroTools = ">=0.4"
-Reexport = ">=0.2"
+JuliaDB = "0.10, 0.11, 0.12, 0.13"
+MacroTools = "0.4, 0.5"
+Reexport = "0.2"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
